--- a/about.html
+++ b/about.html
@@ -59,12 +59,12 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>Welcome to my Website</strong>
+              <strong>A little bit about me</strong>
             </h1>
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">I am very happy that you come to my website to see my work</p>
+            <p class="text-faded mb-5">I am Rudy RAVELIN and I am student at BYU-Idaho right now I am learning HTML, CSS and Javascript</p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
           </div>
         </div>
