--- a/about.html
+++ b/about.html
@@ -97,9 +97,9 @@
         <div class="row">
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-diamond text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Sturdy Templates</h3>
-              <p class="text-muted mb-0">Our templates are updated regularly so they don't break.</p>
+              <i class="fa fa-4x fa-laptop text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">CIT 230</h3>
+              <p class="text-muted mb-0">Networking</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
