--- a/about.html
+++ b/about.html
@@ -98,29 +98,29 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-laptop text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">CIT 230</h3>
+              <h3 class="mb-3">CIT 240</h3>
               <p class="text-muted mb-0">Networking</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-paper-plane text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Ready to Ship</h3>
-              <p class="text-muted mb-0">You can use this theme as is, or you can make changes!</p>
+              <i class="fa fa-4x fa-laptop text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">CIT 260</h3>
+              <p class="text-muted mb-0">Hard one!</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-newspaper-o text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Up to Date</h3>
-              <p class="text-muted mb-0">We update dependencies to keep things fresh.</p>
+              <i class="fa fa-4x fa-laptop text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">CIT 230</h3>
+              <p class="text-muted mb-0">Web front end.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Made with Love</h3>
-              <p class="text-muted mb-0">You have to make your websites with love these days!</p>
+              <i class="fa fa-4x fa-laptop text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">CIT 352  </h3>
+              <p class="text-muted mb-0">security!</p>
             </div>
           </div>
         </div>
