--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">CIT 261 CLASS TOPICS</h2>
+            <h2 class="section-heading">CIT CLASS</h2>
             <hr class="my-4">
           </div>
         </div>
@@ -224,12 +224,12 @@
       </div>
     </section>
 
-    <section class="bg-dark text-white">
+   <!--  <section class="bg-dark text-white">
       <div class="container text-center">
         <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
         <a class="btn btn-light btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Download Now!</a>
       </div>
-    </section>
+    </section> -->
 
     <section id="contact">
       <div class="container">
