--- a/about.html
+++ b/about.html
@@ -248,7 +248,7 @@
           <div class="col-lg-4 mr-auto text-center">
             <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
             <p>
-              <a href="https://mail.google.com">rudyravelin@gmail.com</a>
+              <a href="#https://mail.google.com">rudyravelin@gmail.com</a>
             </p>
           </div>
         </div>
