--- a/about.html
+++ b/about.html
@@ -98,6 +98,13 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-laptop text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">CIT 261</h3>
+              <p class="text-muted mb-0">Web App</p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 text-center">
+            <div class="service-box mt-5 mx-auto">
+              <i class="fa fa-4x fa-laptop text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">CIT 240</h3>
               <p class="text-muted mb-0">Networking</p>
             </div>
