--- a/about.html
+++ b/about.html
@@ -100,6 +100,7 @@
               <i class="fa fa-4x fa-laptop text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">CIT 261</h3>
               <p class="text-muted mb-0">Web App</p>
+              <a href="html5tags/video.html">Topics</a>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
