--- a/html5tags/video.html
+++ b/html5tags/video.html
@@ -25,6 +25,9 @@
 	<p>This is for the auto Play Audio</p>
 	<a href="audioautoplay.html">Click Me</a>
 
+	<h1>Back Home</h1>
+	<p href="index.html">Click Me</p>
+
 
 </body>
 </html>
