--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
       </div>
     </section>
 
-    <section id="services">
+   <!--  <section id="services">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -133,7 +133,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="p-0" id="portfolio">
       <div class="container-fluid p-0">
