--- a/html5tags/video.html
+++ b/html5tags/video.html
@@ -26,7 +26,7 @@
 	<a href="audioautoplay.html">Click Me</a>
 
 	<h1>Back Home</h1>
-	<p href="index.html">Click Me</p>
+	<a href="index.html">Click Me</a>
 
 
 </body>
