--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       </div>
     </section>
 
-    <section class="p-0" id="portfolio">
+  <!--   <section class="p-0" id="portfolio">
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
@@ -230,8 +230,8 @@
           </div>
         </div>
       </div>
-    </section>
-
+    </section> -->
+<!-- 
     <section class="bg-dark text-white">
       <div class="container text-center">
         <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
@@ -262,7 +262,7 @@
         </div>
       </div>
     </section>
-
+ -->
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
