--- a/html5tags/autoplay.html
+++ b/html5tags/autoplay.html
@@ -10,7 +10,7 @@
 			Your browser does not support the video tag.
 		</video>
 
-		<h1>Back</h1>
+		<h1>Back to Home Page</h1>
 <a href="video.html">Click Me</a>
 
 
