--- a/html5tags/video.html
+++ b/html5tags/video.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>This is the video tag</title>
+	<title>Home Page</title>
 </head>
 <body>
 	<h1>HTML TAGS</h1>
 	<h2>VIDEO</h2>
-	<p>Here is a link to show how the video tag works in html.In this example you vae to click on the PLAY button to start the video.</p>
+	<p>In this page you will the links for this topics.</p>
 
 
 		<video width="320" height="240" controls>
@@ -25,9 +25,9 @@
 	<p>This is for the auto Play Audio</p>
 	<a href="audioautoplay.html">Click Me</a>
 
-	<h1>Back Home</h1>
-	<p	<a href="index.html"> </a>Click Me</p>
+	<h1>CANVAS</h1>
+	<a href="canvas.html">Click Me</a>
 
-
+	
 </body>
 </html>
