--- a/html5tags/index.html
+++ b/html5tags/index.html
@@ -42,7 +42,7 @@
 		</div>
 		<div id="footer">
 			<p>
-				Webpage made by <a href="/" target="_blank">Rudy RAVELIN</a>
+				Made by <a href="/" target="_blank">Rudy RAVELIN</a>
 			</p>
 		</div>
 	</div>
