--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<ul>
 				<li><a href="#/home.html">Home</a></li>
 				<li><a href="#/about.html">About</a></li>
-				<li><a href="#/contact.html">CIT 261</a></li>
+				<li><a href="topics.html">CIT 261</a></li>
 				<li><a href="#/contact.html">Contact</a></li>
 			
 			</ul>	
