--- a/topics.html
+++ b/topics.html
@@ -25,22 +25,22 @@
             <tr>
                 <td>01</td>
                 <td><a href="01.html">Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays</a></td>
-                <td>Skilled</td>
+                <td>Not Yet</td>
             </tr>
             <tr>
                 <td>02</td>
                 <td><a href="02.html">Object Creation Functions, Inheritance, Properties, Methods, Instantiation</a></td>
-                <td>Skilled</td>
+                <td>Not Yet</td>
             </tr>
             <tr>
                 <td>03</td>
                 <td><a href="03.html">JSON Parse, Stringify</a></td>
-                <td>Skilled</td>
+                <td>Not Yet</td>
             </tr>
             <tr>
                 <td>04</td>
                 <td><a href="04.html">AJAX requesting a JSON file</a></td>
-                <td>Skilled</td>
+                <td>Not Yet</td>
             </tr>
             <tr>
                 <td>05</td>
@@ -50,27 +50,27 @@
             <tr>
                 <td>06</td>
                 <td><a href="06.html">DOM Manipulation Using createElement, appendChild, insertBefore, removeChild, etc.</a></td>
-                <td>Skilled</td>
+                <td>Not Yet</td>
             </tr>
             <tr>
                 <td>07</td>
                 <td><a href="07.html">Manipulating CSS Class Properties Using JavaScript</a></td>
-                <td>Working</td>
+                <td>Not Yet</td>
             </tr>
             <tr>
                 <td>08</td>
                 <td><a href="08.html">Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</a></td>
-                <td>Skilled</td>
+                <td>Not Yet</td>
             </tr>
             <tr>
                 <td>09</td>
                 <td><a href="09.html">Standard JavaScript Events Including those for Mobile Devices</a></td>
-                <td>Skilled</td>
+                <td>Not Yet</td>
             </tr>
             <tr>
                 <td>10</td>
                 <td><a href="10.html">HTML5 Tags - Video, Audio, and Canvas</a></td>
-                <td>Skilled</td>
+                <td>Not Yet</td>
             </tr>
             <tr>
                 <td>11</td>
