--- a/topics.html
+++ b/topics.html
@@ -3,15 +3,15 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
-        <title>Robbie Dodenbier - CIT 261</title>
-        <meta name="description" content="Assignment Portal page for Robbie Dodenbier in CIT 261 - Mobile Web Frontend Development at Brigham Young University - Idaho.">
+        <title>Rudy RAVELIN - CIT 261</title>
+        <meta name="description" content="Assignment Portal page for Rudy RAVELIN in CIT 261 - Mobile Web App. Brigham Young University - Idaho.">
         <meta name="viewport" content="width=device-width, inital-scale=1">
         <link rel="stylesheet" href="styles/normalize.css">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
         <link rel="stylesheet" href="styles/main.css">
     </head>
     <body>
-    <h1>Robbie Dodenbier Topic List</h1>
+    <h1>Topic List</h1>
         <p>Please find below a list of all topics and their review status:</p>
         <table>
         <thead>
@@ -45,7 +45,7 @@
             <tr>
                 <td>05</td>
                 <td><a href="05.html">Local Storage API, Storing and Retrieving Simple Data, Arrays, Associative Arrays, and Objects</a></td>
-                <td>Working</td>
+                <td>Not Yet</td>
             </tr>
             <tr>
                 <td>06</td>
@@ -75,22 +75,22 @@
             <tr>
                 <td>11</td>
                 <td><a href="11.html">Designing, Defining, and Triggering CSS3 Transitions without Custom Libraries</a></td>
-                <td>Working</td>
+                <td>Not Yet</td>
             </tr>
             <tr>
                 <td>12</td>
                 <td><a href="12.html">Designing, Defining, and Triggering CSS3 Transforms without Custom Libraries</a></td>
-                <td>Working</td>
+                <td>Not Yet</td>
             </tr>
             <tr>
                 <td>13</td>
                 <td><a href="13.html">Designing, Defining, and Triggering CSS3 Animations without Custom Libraries</a></td>
-                <td>Working</td>
+                <td>Not Yet</td>
             </tr>
             <tr>
                 <td>14</td>
                 <td><a href="project.html">Individual Project</a></td>
-                <td>In Progress</td>
+                <td>Not Yet</td>
             </tr>
         </tbody>
         </table>
