--- a/topics.html
+++ b/topics.html
@@ -12,7 +12,7 @@
     </head>
     <body>
     <h1>Topic List</h1>
-        <p>Please find below a list of all topics and their review status:</p>
+        <p>All topics and their review status:</p>
         <table>
         <thead>
             <tr>
