--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 	<div id="page">
 		<div id="logo">
-			<h1><a href="/" id="topics.html">CIT 261 CLASS</a></h1>
+			<h1><a href=id="topics.html">CIT 261 CLASS</a></h1>
 		</div>
 		<div id="nav">
 			<ul>
