--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <!-- you should always add your stylesheet (css) in the head tag so that it starts loading before the page html is being displayed -->	
 	<link rel="stylesheet" href="main.css" type="text/css" />
+	<link rel="stylesheet" href="normalize.css" type="text/css" />
 	
 </head>
 <body>
