--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 	<meta name="description" content="" />
 
 <!-- you should always add your stylesheet (css) in the head tag so that it starts loading before the page html is being displayed -->	
-	<link rel="stylesheet" href="main.css" type="text/css" />
+		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	<link rel="stylesheet" href="normalize.css" type="text/css" />
+	<link rel="stylesheet" href="main.css" type="text/css" />
 	
 </head>
 <body>
