--- a/topics.html
+++ b/topics.html
@@ -92,6 +92,8 @@
                 <td><a href="project.html">Individual Project</a></td>
                 <td>Not Yet</td>
             </tr>
+            <h1>Back to Home Page</h1>
+            <li><a href="index.html">Click Me</a></li>
         </tbody>
         </table>
     </body>
