--- a/topics.html
+++ b/topics.html
@@ -92,7 +92,7 @@
                 <td><a href="project.html">Individual Project</a></td>
                 <td>Not Yet</td>
             </tr>
-            <h1  <a href="index.html"></a> >Back to Home Page:</h1>
+            <h1><a href="index.html"> Back to Home Page:</a></h1>
 
         </tbody>
         </table>
