--- a/audio.html
+++ b/audio.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 			<audio controls>
-	  			<source src="horse.ogg" type="audio/ogg">
-	  			<source src="horse.mp3" type="audio/mpeg">
+	  			<source src="ed.ogg" type="audio/ogg">
+	  			<source src="ed.mp3" type="audio/mpeg">
 				Your browser does not support the audio element.
 			</audio>
 <h1>Back to Home Page</h1>
