--- a/audioautoplay.html
+++ b/audioautoplay.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Auto Play Audio</title>
+	<title>AUDIO</title>
+	<P>This is for the Audio</P>
 </head>
 <body>
-	<p>The Auto Play</p>
-
-
 			<audio autoplay>
 	  			<source src="ed.ogg" type="audio/ogg">
 	  			<source src="ed.mp3" type="audio/mpeg">
 				Your browser does not support the audio element.
 			</audio>
-
-			<h1>Back to Topics</h1>
+<h1>Back to Topics</h1>
 <a href="topics.html">Click Me</a>
-
 </body>
 </html>
