--- a/audioautoplay.html
+++ b/audioautoplay.html
@@ -5,7 +5,7 @@
 	<P>This is for the Audio</P>
 </head>
 <body>
-			<audio controls>
+			<audio autoplay="play">
 	  			<source src="ed.ogg" type="audio/ogg">
 	  			<source src="ed.mp3" type="audio/mpeg">
 				Your browser does not support the audio element.
