--- a/topics.html
+++ b/topics.html
@@ -69,7 +69,7 @@
             </tr>
             <tr>
                 <td>10</td>
-                <td><a href="video.html">HTML5 Tags - Video, Audio, and Canvas</a></td>
+                <td><a href="topic10.html">HTML5 Tags - Video, Audio, and Canvas</a></td>
                 <td>Not Yet</td>
             </tr>
             <tr>
