--- a/topics.html
+++ b/topics.html
@@ -8,7 +8,9 @@
         <meta name="viewport" content="width=device-width, inital-scale=1">
         <link rel="stylesheet" href="styles/normalize.css">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-        <link rel="stylesheet" href="styles/main.css">
+       <!--  <link rel="stylesheet" href="styles/main.css"> -->
+        <!-- you should always add your stylesheet (css) in the head tag so that it starts loading before the page html is being displayed -->  
+    <link rel="stylesheet" href="style.css" type="text/css"/>
     </head>
     <body>
     <h1>Topic List</h1>
