--- a/canvas.html
+++ b/canvas.html
@@ -14,5 +14,5 @@ ctx.fillText("Hello World I am Rudy",10,50);
 
 </body>
 <h2>Back to Home Page</h2>
-<a href="video.html">Click Me</a>
+<a href="topic10.html">Click Me</a>
 </html>
