--- a/topic10.html
+++ b/topic10.html
@@ -17,9 +17,7 @@
 			Your browser does not support the video tag.
 		</video>
 
-		<h2>VIDEO # 2 WITH autoplay</h2>
-		<a href="autoplay.html">Click Me</a>
-	<h1>The Audio</h1>
+		<h1>The Audio</h1>
 	<p>This is for the Audio</p>
 	<a href="audio.html">Click Me</a>
 
@@ -29,6 +27,12 @@
 
 	<h1>CANVAS</h1>
 	<a href="canvas.html">Click Me</a>
+	<script>
+var c = document.getElementById("myCanvas");
+var ctx = c.getContext("2d");
+ctx.font = "20px Arial";
+ctx.fillText("Hello World I am Rudy",10,50);
+</script>
 
 	
 </body>
