--- a/topic10.html
+++ b/topic10.html
@@ -21,12 +21,15 @@
 	<p>This is for the Audio</p>
 	<a href="audio.html">Click Me</a>
 
-	<h1>Audio Auto Play</h1>
-	<p>This is for the auto Play Audio</p>
-	<a href="audioautoplay.html">Click Me</a>
+	<audio controls>
+	  			<source src="ed.ogg" type="audio/ogg">
+	  			<source src="ed.mp3" type="audio/mpeg">
+				Your browser does not support the audio element.
+			</audio>
 
 	<h1>CANVAS</h1>
 	<a href="canvas.html">Click Me</a>
+	
 	<script>
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
