--- a/topic10.html
+++ b/topic10.html
@@ -28,8 +28,8 @@
 			</audio>
 
 	<h1>CANVAS</h1>
-	<a href="canvas.html">Click Me</a>
-	
+	<canvas id="myCanvas" width="300" height="200" style="border:10px solid #d5d5d5;">
+Your browser does not support the HTML5 canvas tag.</canvas>
 	<script>
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
