--- a/topic10.html
+++ b/topic10.html
@@ -30,7 +30,7 @@
 		<!-- 	CANVAS CODE EXAMPLE -->
 
 	<h1>CANVAS</h1>
-	
+
 	<canvas id="myCanvas" width="300" height="200" style="border:10px solid #d5d5d5;">
 Your browser does not support the HTML5 canvas tag.
 	</canvas>
@@ -42,6 +42,9 @@ Your browser does not support the HTML5 canvas tag.
 		ctx.fillText("Hello World I am Rudy",10,50);
 </script>
 
+
+<h1>Back to Tpoics Links</h1>
+<li><a href="topics.html">CLICK ME</a></li>
 	
 </body>
 </html>
