--- a/topic10.html
+++ b/topic10.html
@@ -43,7 +43,7 @@ Your browser does not support the HTML5 canvas tag.
 </script>
 
 
-<h1>Back to Tpoics Links</h1>
+<h1>Back to Topics Links</h1>
 <li><a href="topics.html">CLICK ME</a></li>
 	
 </body>
