--- a/topic10.html
+++ b/topic10.html
@@ -3,6 +3,7 @@
 <head>
 	<!-- you should always add your stylesheet (css) in the head tag so that it starts loading before the page html is being displayed -->	
 	<link rel="stylesheet" href="style.css" type="text/css"/>
+	<link rel="stylesheet"  href="canvas.js">
 	<title>Home Page</title>
 </head>
 <body>
@@ -31,16 +32,16 @@
 
 	<h1>CANVAS</h1>
 
-	<canvas id="myCanvas" width="300" height="200" style="border:10px solid #d5d5d5;">
-Your browser does not support the HTML5 canvas tag.
+	<canvas id="canvas" width="200" height="200"> 
+		Your browser does not support the HTML5 canvas tag.
 	</canvas>
 	
-<script>
+<!-- <script>
 		var c = document.getElementById("myCanvas");
 		var ctx = c.getContext("2d");
 		ctx.font = "20px Arial";
 		ctx.fillText("Hello World I am Rudy",10,50);
-</script>
+</script> -->
 
 
 <h1>Back to Topics Links</h1>
