--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div id="content">
 			<h2>Home</h2>
 			<p>
-				This is for my CIT 261 class I am afraid of this classbut I have my team with me and my teacher also. I think I will do it and understand all the 13 topics that i have to cover during 10 weeks. Crazy !!!
+				This is for my CIT 261 class I am afraid of this classbut I have my team with me and my teacher also.<br> I think I will do it and understand all the 13 topics that i have to cover during 10 weeks. Crazy !!!
 			</p>
 			<br>
 			<p> 
