--- a/csstransitions.html
+++ b/csstransitions.html
@@ -2,9 +2,23 @@
 <html>
 <head>
 	<title>CSS Transitions</title>
+	  <link rel="stylesheet" href="styles/transitions.css">
 </head>
 <body>
-	<h1>This is for my CSS Transitions</h1>
+	<h1>Example of CSS Transitions</h1>
+
+
+	<div class="parent">
+	 	 <div class="box">CSS TRANSITION</div>
+	</div>
+  
+
+
+
+
+
+<h1>Back to Topics Links</h1>
+<li><a href="topics.html">CLICK ME</a></li>
 
 </body>
 </html>
