--- a/csstransitions.html
+++ b/csstransitions.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>CSS Transitions</title>
-	  <link rel="stylesheet" href="styles/transitions.css">
+	  <link rel="stylesheet" href="transitions.css">
 </head>
 <body>
 	<h1>Example of CSS Transitions</h1>
