--- a/csstransitions.html
+++ b/csstransitions.html
@@ -3,6 +3,7 @@
 <head>
 	<title>CSS Transitions</title>
 	  <link rel="stylesheet" href="transitions.css">
+	  <link rel="stylesheet" href="transitions.js">
 </head>
 <body>
 	<h1>Example of CSS Transitions</h1>
