--- a/csstransitions.html
+++ b/csstransitions.html
@@ -6,17 +6,10 @@
 	  <link rel="stylesheet" href="transitions.js">
 </head>
 <body>
-	<!-- <h1>Example of CSS Transitions</h1> -->
+	<h1>Example of CSS Transitions</h1>
 
-
-	<div class="parent">
-	 	 <div class="box">RUDY</div>
-	</div>
+<div class="box"></div>
   
-
-
-
-
 
 <h1>Back to Topics Links</h1>
 <li><a href="topics.html">CLICK ME</a></li>
