--- a/topics.html
+++ b/topics.html
@@ -81,7 +81,7 @@
             </tr>
             <tr>
                 <td>12</td>
-                <td><a href="transforms.html">Designing, Defining, and Triggering CSS3 Transforms without Custom Libraries</a></td>
+                <td><a href="transform.html">Designing, Defining, and Triggering CSS3 Transforms without Custom Libraries</a></td>
                 <td>Not Yet</td>
             </tr>
             <tr>
