--- a/topics.html
+++ b/topics.html
@@ -56,7 +56,7 @@
             </tr>
             <tr>
                 <td>07</td>
-                <td><a href="07.html">Manipulating CSS Class Properties Using JavaScript</a></td>
+                <td><a href="manipulating.html">Manipulating CSS Class Properties Using JavaScript</a></td>
                 <td>Not Yet</td>
             </tr>
             <tr>
