--- a/manipulating.html
+++ b/manipulating.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link id="pagestyle" rel="stylesheet" type="text/css" href="default.css">
+<link id="pagestyle" rel="stylesheet" type="text/css" href="style.css">
 <script>
 function swapStyleSheet(sheet){
 	document.getElementById('pagestyle').setAttribute('href', sheet);
