--- a/manipulating.html
+++ b/manipulating.html
@@ -6,6 +6,17 @@
 function swapStyleSheet(sheet){
 	document.getElementById('pagestyle').setAttribute('href', sheet);
 }
+
+ }(if (window.name
+                                                   ; ( swapstylesheet(window.name
+                                                 {
+
+                                                 }( function swapstylesheet(sheet
+                                                                  ; window.name = sheet
+       ;( document.getElementById('id').setAttribute('href',sheet)
+
+      {
+
 </script>
 </head>
 <body>
