--- a/manipulating.html
+++ b/manipulating.html
@@ -21,7 +21,7 @@ function swapStyleSheet(sheet){
 </head>
 <body>
 <h2>Javascript Change StyleSheet Without Page Reload</h2>
-<button onclick="swapStyleSheet('dark.css')">Dark Style Sheet</button>
+<button onclick="swapStyleSheet('black.css')">Black Style Sheet</button>
 <button onclick="swapStyleSheet('blue.css')">Blue Style Sheet</button>
 <button onclick="swapStyleSheet('default.css')">Default Style Sheet</button>
 
