--- a/manipulating.html
+++ b/manipulating.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <link id="pagestyle" rel="stylesheet" type="text/css" href="style.css">
+<link id="pagestyle" rel="stylesheet" type="text/css" href="blue.css">
+<link id="pagestyle" rel="stylesheet" type="text/css" href="black.css">
 <script>
 function swapStyleSheet(sheet){
 	document.getElementById('pagestyle').setAttribute('href', sheet);
