--- a/manipulating.html
+++ b/manipulating.html
@@ -25,7 +25,7 @@ function swapStyleSheet(sheet){
 <h2>Javascript Change StyleSheet Without Page Reload</h2>
 <button onclick="swapStyleSheet('black.css')">Black Style Sheet</button>
 <button onclick="swapStyleSheet('blue.css')">Blue Style Sheet</button>
-<button onclick="swapStyleSheet('default.css')">Default Style Sheet</button>
+<button onclick="swapStyleSheet('style.css')">Default Style Sheet</button>
 
 <h1>Back to Topics Links</h1>
 <li><a href="topics.html">CLICK ME</a></li>
