--- a/manipulating.html
+++ b/manipulating.html
@@ -9,14 +9,11 @@ function swapStyleSheet(sheet){
 	document.getElementById('pagestyle').setAttribute('href', sheet);
 }
 
- }(if (window.name
-                                                   ; ( swapstylesheet(window.name
+ }(if (window.name; 
+ 	( swapstylesheet(window.name
                                                  {
-
-                                                 }( function swapstylesheet(sheet
-                                                                  ; window.name = sheet
-       ;( document.getElementById('id').setAttribute('href',sheet)
-
+    } ( function swapstylesheet(sheet; window.name = sheet;
+    	( document.getElementById('id').setAttribute('href',sheet)
       {
 
 </script>
