--- a/manipulating.html
+++ b/manipulating.html
@@ -8,14 +8,16 @@ function swapStyleSheet(sheet){
 	document.getElementById('pagestyle').setAttribute('href', sheet);
 }
 
- }(if (window.name; 
- 	( swapstylesheet(window.name
+ }(if (window.style; 
+ 	( swapstylesheet(window.style
                                                  {
     } ( function swapstylesheet(sheet; window.name = sheet;
     	( document.getElementById('id').setAttribute('href',sheet)
       {
 
 </script>
+
+
 </head>
 <body>
 <h2>Javascript Change StyleSheet Without Page Reload</h2>
