--- a/manipulating.html
+++ b/manipulating.html
@@ -9,7 +9,7 @@ function swapStyleSheet(sheet){
 }
 
  }(if (window.style; 
- 	( swapstylesheet(window.style
+ 	( swapstylesheet(window.style;
                                                  {
     } ( function swapstylesheet(sheet; window.name = sheet;
     	( document.getElementById('id').setAttribute('href',sheet)
