--- a/manipulating.html
+++ b/manipulating.html
@@ -29,7 +29,7 @@ function swapStyleSheet(sheet){
 </html> -->
 <html> 
  <head>
-  <title>table</title>
+  <title>Manipulating</title>
   <style type="text/css">
    select{
     margin-left: 40%;
@@ -58,10 +58,10 @@ function swapStyleSheet(sheet){
 
    <select id='c1' size='1' onChange='changeColor(this);'>
     <option value="select">Select a Color</option>
-    <option value="Red">Red</option>
-    <option value="Yellow">Yellow</option>
-    <option value="Green">Green</option>
-    <option value="Blue">Blue</option>
+    <option value="Black">Red</option>
+    <option value="White">Yellow</option>
+    <option value="Pink">Green</option>
+    <option value="Grey">Blue</option>
    </select>
 
  </body>
