--- a/manipulating.html
+++ b/manipulating.html
@@ -58,10 +58,10 @@ function swapStyleSheet(sheet){
 
    <select id='c1' size='1' onChange='changeColor(this);'>
     <option value="select">Select a Color</option>
-    <option value="Black">Red</option>
-    <option value="White">Yellow</option>
-    <option value="Pink">Green</option>
-    <option value="Grey">Blue</option>
+    <option value="Black">Black</option>
+    <option value="White">White</option>
+    <option value="Pink">Pink</option>
+    <option value="Grey">Grey</option>
    </select>
 
  </body>
