--- a/manipulating.html
+++ b/manipulating.html
@@ -64,5 +64,8 @@ function swapStyleSheet(sheet){
     <option value="Grey">Grey</option>
    </select>
 
+<h1>Back to Topics Links</h1>
+<li><a href="topics.html">CLICK ME</a></li>
+
  </body>
  </html>﻿
