--- a/manipulating.html
+++ b/manipulating.html
@@ -58,7 +58,7 @@ function swapStyleSheet(sheet){
 
    <select id='c1' size='1' onChange='changeColor(this);'>
     <option value="select">Select a Color</option>
-    <option value="Black">Black</option>
+    <option value="Blue">Blue</option>
     <option value="White">White</option>
     <option value="Pink">Pink</option>
     <option value="Grey">Grey</option>
