--- a/manipulating.html
+++ b/manipulating.html
@@ -1,32 +1,4 @@
-<!-- <!DOCTYPE html>
-<html>
-<head>
-<link id="pagestyle" rel="stylesheet" type="text/css" href="style.css">
-
-<script>
-function swapStyleSheet(sheet){
-	document.getElementById('pagestyle').setAttribute('href', sheet);
-}
-
- }(if (window.name; 
- 	( swapstylesheet(window.name
-                                                 {
-    } ( function swapstylesheet(sheet; window.name = sheet;
-    	( document.getElementById('id').setAttribute('href',sheet)
-      {
-
-</script>
-</head>
-<body>
-<h2>Javascript Change StyleSheet Without Page Reload</h2>
-<button onclick="swapStyleSheet('black.css')">Black Style Sheet</button>
-<button onclick="swapStyleSheet('blue.css')">Blue Style Sheet</button>
-<button onclick="swapStyleSheet('style.css')">Default Style Sheet</button>
-
-<h1>Back to Topics Links</h1>
-<li><a href="topics.html">CLICK ME</a></li>
-</body>
-</html> -->
+<!DOCTYPE html>
 <html> 
  <head>
   <title>Manipulating</title>
