--- a/manipulating.html
+++ b/manipulating.html
@@ -36,6 +36,14 @@
     <option value="Grey">Grey</option>
    </select>
 
+   <!-- Change text -->
+
+   <h1 id="id1">Change me</h1>
+
+<button type="button" 
+onclick="document.getElementById('id1').style.color = 'red'">
+Click Me!</button>
+
 <h1>Back to Topics Links</h1>
 <li><a href="topics.html">CLICK ME</a></li>
 
