--- a/manipulating.html
+++ b/manipulating.html
@@ -38,7 +38,7 @@
 
    <!-- Change text -->
 
-   <h1 id="id1">Change me</h1>
+   <h1 id="id1">Change me only</h1>
 
 <button type="button" 
 onclick="document.getElementById('id1').style.color = 'red'">
