--- a/manipulating.html
+++ b/manipulating.html
@@ -31,7 +31,7 @@
    <select id='c1' size='1' onChange='changeColor(this);'>
     <option value="select">Select a Color</option>
     <option value="Blue">Blue</option>
-    <option value="White">White</option>
+    <option value="Purple">PURPLE</option>
     <option value="Pink">Pink</option>
     <option value="Grey">Grey</option>
    </select>
