--- a/manipulating.html
+++ b/manipulating.html
@@ -2,7 +2,9 @@
 <html> 
  <head>
   <title>Manipulating</title>
-  <style type="text/css">
+<link rel="stylesheet" href="style.css" type="text/css"/>
+  
+ <!--  <style type="text/css">
    select{
     margin-left: 40%;
     margin-top: 20%;
@@ -11,7 +13,7 @@
     font-size: 30px;
     padding-left: 10px;
    }
-  </style>
+  </style> -->
   
   <script type="text/Javascript">
 
