--- a/topics.html
+++ b/topics.html
@@ -6,7 +6,7 @@
         <title>Rudy RAVELIN - CIT 261</title>
         <meta name="description" content="Assignment Portal page for Rudy RAVELIN in CIT 261 - Mobile Web App. Brigham Young University - Idaho.">
         <meta name="viewport" content="width=device-width, inital-scale=1">
-        <link rel="stylesheet" href="styles/normalize.css">
+       <!--  <link rel="stylesheet" href="styles/normalize.css"> -->
         <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
        <!--  <link rel="stylesheet" href="styles/main.css"> -->
         <!-- you should always add your stylesheet (css) in the head tag so that it starts loading before the page html is being displayed -->  
