--- a/manipulating.html
+++ b/manipulating.html
@@ -3,7 +3,7 @@
  <head>
   <title>Manipulating</title>
 <link rel="stylesheet" href="style.css" type="text/css"/>
-  
+
  <!--  <style type="text/css">
    select{
     margin-left: 40%;
@@ -43,7 +43,7 @@
    <h1 id="id1">Change me only</h1>
 
 <button type="button" 
-onclick="document.getElementById('id1').style.color = 'red'">
+onclick="document.getElementById('id1').style.color = 'black'">
 Click Me!</button>
 
 <h1>Back to Topics Links</h1>
