--- a/manipulating.html
+++ b/manipulating.html
@@ -46,6 +46,15 @@
 onclick="document.getElementById('id1').style.color = 'black'">
 Click Me!</button>
 
+<!-- Change -->
+
+ <h2 id="id2">Change me in DarkGoldenrod3</h2>
+
+<button type="button" 
+onclick="document.getElementById('id2').style.color = 'DarkGoldenrod3'">
+Click Me!</button>
+
+
 <h1>Back to Topics Links</h1>
 <li><a href="topics.html">CLICK ME</a></li>
 
