--- a/manipulating.html
+++ b/manipulating.html
@@ -48,10 +48,10 @@ Click Me!</button>
 
 <!-- Change -->
 
- <h2 id="id2">Change me in DarkGoldenrod3</h2>
+ <h2 id="id2">Change me in Navy Color</h2>
 
 <button type="button" 
-onclick="document.getElementById('id2').style.color = 'DarkGoldenrod3'">
+onclick="document.getElementById('id2').style.color = 'navy'">
 Click Me!</button>
 
 
