--- a/cssanimations.html
+++ b/cssanimations.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 	<title>CSS Animations</title>
-	  <link rel="stylesheet" href="transitions.css">
+	  <link rel="stylesheet" href="cssanimations.css">
 	  <!-- <link rel="stylesheet" href="transitions.js"> -->
 </head>
 <body>
 	<h1>Example of CSS Animations</h1>
+
 
 
 
@@ -16,3 +17,9 @@
 
 </body>
 </html>
+
+
+<!-- </script>
+<script type="text/javascript" src="https://ajax.cloudflare.com/cdn-cgi/scripts/b7ef205d/cloudflare-static/rocket.min.js"></script>
+<link rel="stylesheet" type="text/css" href="styles.css">
+ -->
