--- a/cssanimations.html
+++ b/cssanimations.html
@@ -7,13 +7,9 @@
 </head>
 <body>
 	<h1>Example of CSS Animations</h1>
-
-
-
-
-
-<h1>Back to Topics Links</h1>
-<li><a href="topics.html">CLICK ME</a></li>
+	<li>
+		<a href="topics.html">CLICK ME</a>
+	</li>
 
 </body>
 </html>
