--- a/cssanimations.html
+++ b/cssanimations.html
@@ -7,12 +7,13 @@
 </head>
 <body>
 	<h1>Example of CSS Animations</h1>
-	<br>
-	<br>
-	<br>
+
 		<h2>
-		<br>Back to Topics</h2>
-		<a href="topics.html">CLICK ME</a>
+			<br>
+			<br>Back to Topics</h2>
+		<a href="topics.html">
+			<br>
+			<br>CLICK ME</a>
 </body>
 </html>
 
