--- a/cssanimations.html
+++ b/cssanimations.html
@@ -10,10 +10,11 @@
 
 		<h2>
 			<br>
-			<br>Back to Topics</h2>
+			<br>Back to Topics
 		<a href="topics.html">
 			<br>
 			<br>CLICK ME</a>
+		</h2>
 </body>
 </html>
 
