--- a/cssanimations.html
+++ b/cssanimations.html
@@ -9,11 +9,8 @@
 	<h1>Example of CSS Animations</h1>
 
 		<h2>
-			<br>
-			<br>Back to Topics
-		<a href="topics.html">
-			<br>
-			<br>CLICK ME</a>
+			Back to Topics
+			<a href="topics.html">CLICK ME</a>
 		</h2>
 </body>
 </html>
