--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<li><a href="#/about.html">About</a></li>
 				<li><a href="topics.html">CIT 261</a></li>
 				<li><a href="#/contact.html">Contact</a></li>
-				<li><a href="journal.html">JOURNAL CIT 261</a></li>
+				<li><a href="journal.html">JOURNAL-CIT:261</a></li>
 			
 			</ul>	
 		</div>
