--- a/journal.html
+++ b/journal.html
@@ -10,6 +10,64 @@
 		<p>		In this topic I learn enough things that I did know before I take this CIT 261 class. <br>
 				I learn in this topic How to add a video, audio on a web page. I also learned how the canvas work and what we can do with it, like create animations stuff like that. But there are a lot of things I have to keep learning in this topic.
 	 	</p>
+	 		 <tr>
+                <td>10</td>
+                <td><a href="topic10.html">HTML5 Tags - Video, Audio, and Canvas</a></td>
+                <td>Quick link</td>
+            </tr>
+
+
+
+
+
+	 	<h1>Designing, Defining, and Triggering CSS3 Transitions without Custom Libraries (Thought Library)</h1>
+
+	 		<p>In this topic I learned how we can create transitions with pure CSS without custom libraries and how powerful is CSS</p>
+	 			<tr>
+                <td>11</td>
+                <td><a href="csstransitions.html">Designing, Defining, and Triggering CSS3 Transitions without Custom Libraries</a></td>
+                <td>Quick link</td>
+            </tr>
+
+
+
+
+
+
+	 		<h1>Designing, Defining, and Triggering CSS3 Transforms without Custom Libraries (Thought Library)</h1>
+
+	 			<p>In this topic I learned how we can create transforms with pure CSS without custom libraries and how powerful is CSS</p>
+	 			<tr>
+                <td>12</td>
+                <td><a href="transform.html">Designing, Defining, and Triggering CSS3 Transforms without Custom Libraries</a></td>
+                <td>Quick link</td>
+            </tr>
+
+
+
+
+
+	 	<h1>Designing, Defining, and Triggering CSS3 Animations without Custom Libraries (Thought Library)</h1>
+
+	 				<p>In this topic I learned how we can create animations with pure CSS without custom libraries and how powerful is CSS</p>
+	 				<tr>
+                <td>13</td>
+                <td><a href="cssanimations.html">Designing, Defining, and Triggering CSS3 Animations without Custom Libraries</a></td>
+                <td>Quick link</td>
+            </tr>
+
+
+	 	<h1>Manipulating CSS Class Properties Using JavaScript</h1>
+
+	 			<p>I learned in this topic how tu use Javascript to manipulate css</p>
+
+	 				<tr>
+                <td>07</td>
+                <td><a href="manipulating.html">Manipulating CSS Class Properties Using JavaScript</a></td>
+                <td>Quick link</td>
+            </tr>
+
+
 
 </body>
 </html>
