--- a/journal.html
+++ b/journal.html
@@ -51,7 +51,7 @@
 
 	 				<p>In this topic I learned how we can create animations with pure CSS without custom libraries and how powerful is CSS</p>
 	 				<tr>
-                <td>13 Quick link</td>
+                <td>13 Quick link: <br></td>
                 <td><a href="cssanimations.html">Designing, Defining, and Triggering CSS3 Animations without Custom Libraries</a></td>
                 <td>Quick link</td>
             </tr>
@@ -62,7 +62,7 @@
 	 			<p>I learned in this topic how tu use Javascript to manipulate css</p>
 
 	 				<tr>
-                <td>07 <td>Quick link</td></td>
+                <td>07 <td>Quick link: <br></td></td>
                 <td><a href="manipulating.html">Manipulating CSS Class Properties Using JavaScript</a></td>
                 
             </tr>
