--- a/journal.html
+++ b/journal.html
@@ -11,9 +11,8 @@
 				I learn in this topic How to add a video, audio on a web page. I also learned how the canvas work and what we can do with it, like create animations stuff like that. But there are a lot of things I have to keep learning in this topic.
 	 	</p>
 	 		 <tr>
-                <td>10</td>
+                <td>10 <td>Quick link: <br></td><</td>
                 <td><a href="topic10.html">HTML5 Tags - Video, Audio, and Canvas</a></td>
-                <td>Quick link</td>
             </tr>
 
 
@@ -24,10 +23,9 @@
 
 	 		<p>In this topic I learned how we can create transitions with pure CSS without custom libraries and how powerful is CSS</p>
 	 			<tr>
-                <td>11</td>
+                <td>11 <td>Quick link: <br></td><</td>
                 <td><a href="csstransitions.html">Designing, Defining, and Triggering CSS3 Transitions without Custom Libraries</a></td>
-                <td>Quick link</td>
-            </tr>
+                </tr>
 
 
 
@@ -38,9 +36,8 @@
 
 	 			<p>In this topic I learned how we can create transforms with pure CSS without custom libraries and how powerful is CSS</p>
 	 			<tr>
-                <td>12</td>
+                <td>12 <td>Quick link: <br></td><</td>
                 <td><a href="transform.html">Designing, Defining, and Triggering CSS3 Transforms without Custom Libraries</a></td>
-                <td>Quick link</td>
             </tr>
 
 
@@ -51,7 +48,7 @@
 
 	 				<p>In this topic I learned how we can create animations with pure CSS without custom libraries and how powerful is CSS</p>
 	 				<tr>
-                <td>13 Quick link: <br></td>
+                <td>13 <td>Quick link: <br></td><</td>
                 <td><a href="cssanimations.html">Designing, Defining, and Triggering CSS3 Animations without Custom Libraries</a></td>
                 <td>Quick link</td>
             </tr>
