--- a/journal.html
+++ b/journal.html
@@ -4,7 +4,7 @@
 	<title>My Journal</title>
 	<link rel="stylesheet" href="style.css" type="text/css"/>
 </head>
-<body>
+<body id="content1">
 	<h1>HTML5 Tags - Video, Audio, and Canvas</h1>
 
 		<p>		In this topic I learn enough things that I did know before I take this CIT 261 class. <br>
@@ -67,4 +67,8 @@
 
 
 </body>
+<footer>
+	<h1>Back to Topics Links</h1>
+	<li><a href="topics.html">CLICK ME</a></li>
+</footer>
 </html>
