--- a/journal.html
+++ b/journal.html
@@ -4,7 +4,8 @@
 	<title>My Journal</title>
 	<link rel="stylesheet" href="style.css" type="text/css"/>
 </head>
-<body id="content1">
+<div id="content">
+<body>
 	<h1>HTML5 Tags - Video, Audio, and Canvas</h1>
 
 		<p>		In this topic I learn enough things that I did know before I take this CIT 261 class. <br>
@@ -65,6 +66,9 @@
             </tr>
 
 
+
+
+            </div>
 
 </body>
 <footer>
