--- a/journal.html
+++ b/journal.html
@@ -4,7 +4,7 @@
 	<title>My Journal</title>
 	<link rel="stylesheet" href="style.css" type="text/css"/>
 </head>
-<div id="content1">
+<div id="bd1">
 <body>
 	<h1>HTML5 Tags - Video, Audio, and Canvas</h1>
 
