--- a/csstransitions.html
+++ b/csstransitions.html
@@ -6,7 +6,7 @@
 	  <!-- <link rel="stylesheet" href="transitions.js"> -->
 </head>
 <body>
-	<h1>Example of CSS Transitions</h1>
+	<h1>Example of CSS Transitions Hover the picture</h1>
 
 <!-- <div class="box"></div> -->
   <div id="cf">
