--- a/cssjs.html
+++ b/cssjs.html
@@ -4,7 +4,7 @@
 	<title>CSS3-JS</title>
 	<link rel="stylesheet" type="text/css" href="cssjs.css">
 </head>
-<body>
+<body class="rudy">
 	<p>Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</p>
 
 	<div class="axis">
