--- a/cssjs.html
+++ b/cssjs.html
@@ -7,6 +7,7 @@
 <body class="rudy">
 	<p>Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</p>
 
+<div id="bebet">	
 	<div class="axis">
     <div class="rotate">
         <div class="raindrop" id="center"></div>
@@ -14,6 +15,7 @@
             <div class="planet" id="circle">A</div>
         </div>
     </div>
+</div>
 </div>
 
 </body>
