--- a/cssjs.html
+++ b/cssjs.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="cssjs.css">
 </head>
 <body class="rudy">
-	<p>Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</p>
+	<h1>Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</h1>
 
 <div id="bebet">	
 	<div class="axis">
