--- a/cssjs.html
+++ b/cssjs.html
@@ -3,25 +3,87 @@
 <head>
 	<title>CSS3-JS</title>
 	<link rel="stylesheet" type="text/css" href="cssjs.css">
+	<link href='//fonts.googleapis.com/css?family=Signika+Negative:300,400,700' rel='stylesheet' type='text/css'>
 </head>
-<body class="rudy">
-	<h1>Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</h1>
+<body>
+		
 
+			<script>
+				var $box = $("#box"),
+    $field = $("#field"),
+    rotation = 0,
+    rotationX = 0, 
+    rotationY = 0,
+    wanderTween, ignoreRollovers;
+
+//set a perspective on the container so we can see the 3D-ness
+TweenLite.set($field, {perspective: 500});
+//offset the origin on the z-axis to make the spins more interesting.
+TweenLite.set($box, {transformOrigin:"center center -150px"});
+//pulsate the box using scaleX and scaleY
+TweenMax.to($box, 1.2, {scaleX:0.8, scaleY:0.8, force3D:true, yoyo:true, repeat:-1, ease:Power1.easeInOut});
+
+//on rollover, rotate the box but to avoid excessive spinning, we'll desensitize rollovers during the first second of animation.
+$box.hover(function() {
+  if (!ignoreRollovers) {
+    rotation += 360;
+    ignoreRollovers = true;
+    TweenLite.to($box, 2, {rotation:rotation, ease:Elastic.easeOut});
+    TweenLite.delayedCall(1, function() {
+      ignoreRollovers = false;
+    });
+  }
+}, function() {});
+
+$("#rotation").click(function() {
+  rotation += 360;
+  TweenLite.to($box, 2, {rotation:rotation, ease:Elastic.easeOut});
+});
+
+$("#rotationX").click(function() {
+  rotationX += 360;
+  TweenLite.to($box, 2, {rotationX:rotationX, ease:Power2.easeOut});
+});
+
+$("#rotationY").click(function() {
+  rotationY += 360;
+  TweenLite.to($box, 2, {rotationY:rotationY, ease:Power1.easeInOut});
+});
+
+$("#move").click(function() {
+  if (wanderTween) {
+    wanderTween.kill();
+    wanderTween = null;
+    TweenLite.to($box, 0.5, {x:0, y:0});
+  } else {
+    wander();
+  }
+});
+
+//randomly choose a place on the screen and animate there, then do it again, and again.
+function wander() {
+  var x = (($field.width() - $box.width()) / 2) * (Math.random() * 1.8 - 0.9),
+      y = (($field.height() - $box.height()) / 2) * (Math.random() * 1.4 - 0.7);
+  wanderTween = TweenLite.to($box, 2.5, {x:x, y:y, ease:Power1.easeInOut, onComplete:wander});
+}
 	
-	<div class="axis">
-    <div class="rotate">
-        <div class="raindrop" id="center"></div>
-        <div class="counterrotate">
-            <div class="planet" id="circle">A</div>
-        </div>
+
+			</script>
+
+<div id="demo">
+  
+  <div id="field">
+    <p>Notice that scale, rotation, and position can be animated independently using different eases and partially overlapping start/end times (impossible with CSS animations).</p>
+    <div id="box">Independent transforms</div>
+    
+    <div id="controls">
+      <button id="rotation">Spin rotation</button>
+      <button id="rotationX">Spin rotationX</button>
+      <button id="rotationY">Spin rotationY</button>
+      <button id="move">wander (position)</button>
     </div>
+  </div>
 </div>
-
-
-	<h2>
-			Back to Topics
-			<a href="topics.html">CLICK ME</a>
-		</h2>
 
 </body>
 </html>
