--- a/cssjs.html
+++ b/cssjs.html
@@ -1,26 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CSS3-JS</title>
-	<link rel="stylesheet" type="text/css" href="cssjs.css">
-	<link href='//fonts.googleapis.com/css?family=Signika+Negative:300,400,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="jscss.js">
+	<title>CSS and JavaScript</title>
 </head>
 <body>
-<div id="demo">
-  
-  <div id="field">
-    <p>Notice that scale, rotation, and position can be animated independently using different eases and partially overlapping start/end times (impossible with CSS animations).</p>
-    <div id="box">Independent transforms</div>
-    
-    <div id="controls">
-      <button id="rotation">Spin rotation</button>
-      <button id="rotationX">Spin rotationX</button>
-      <button id="rotationY">Spin rotationY</button>
-      <button id="move">wander (position)</button>
-    </div>
-  </div>
-</div>
+	<h1>Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</h1>
 
 </body>
 </html>
