--- a/cssjs.html
+++ b/cssjs.html
@@ -1,15 +1,31 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>CSS and JavaScript</title>
-</head>
-<body>
-	<h1>Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</h1>
-
-		<h2>
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="utf-8">
+        <title>CSS and JAVASCRIPT</title>
+       
+        <meta name="viewport" content="width=device-width, inital-scale=1">
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+        <script type="text/javascript" src="scripts/jscss.js"></script>
+    </head>
+    <body>
+        <h2>Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</h2>
+        <main>
+            <p>Click the button below to watch the sunset and rise!</p>
+            <div id ="container">
+                <div id ="animate"></div>
+            </div>
+            <div class="myButtons">
+                <button type="button" onclick="sunSet()">Sunset</button>
+                <button type="button" onclick="sunRise()">Sunrise</button>
+                <button type="button" onclick="location.reload()">Reset</button>
+                <button type="button" onclick="window.location.href='index.html'">Home</button>
+            </div>
+        </main>
+        <h2>
 			Back to Topics
 			<a href="topics.html">CLICK ME</a>
 		</h2>
-
-</body>
+    </body>
 </html>
