--- a/cssjs.html
+++ b/cssjs.html
@@ -16,5 +16,14 @@
 						Back to Topics
 							<a href="topics.html">CLICK ME</a>
 					</h2>
+
+
+
+					<h3>CSS and JavaScript</h3>
+<div class="zoomPic"></div>
+<button class='zoom'>Zoom In</button>
+<button class='pause'>Pause</button>
+<button class='zoomout'>Zoom Out</button>
+
    </body>
 </html>
