--- a/cssjs.html
+++ b/cssjs.html
@@ -5,7 +5,7 @@
         <title>CSS and JAVASCRIPT</title>
        
         <meta name="viewport" content="width=device-width, inital-scale=1">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="cssjs.css">
         <script type="text/javascript" src="scripts/jscss.js"></script>
 
     </head>
