--- a/cssjs.html
+++ b/cssjs.html
@@ -4,8 +4,8 @@
        <title>CSS and JAVASCRIPT</title>
        
         <link rel="stylesheet" type="text/css" href="cssjs.css">
-        <script type="text/javascript" src="jscss.js"></script>
-
+        <link rel="stylesheet" type="text/css" href="jscss.js">
+      
     </head>
   <body>
         	<h1>Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</h1>
