--- a/cssjs.html
+++ b/cssjs.html
@@ -4,7 +4,7 @@
        <title>CSS and JAVASCRIPT</title>
        
         <link rel="stylesheet" type="text/css" href="cssjs.css">
-        <link rel="stylesheet" type="text/css" href="jscss.js">
+        <script type="text/javascript" src="jscss.js"></script>
       
     </head>
   <body>
