--- a/cssjs.html
+++ b/cssjs.html
@@ -15,7 +15,7 @@
   <label>Choose a footer color:
   <input type="color" value="#ff4545">
 
-  <footer></footer>
+  <footer>Hello World</footer>
     
 
    </body>
