--- a/cssjs.html
+++ b/cssjs.html
@@ -4,7 +4,7 @@
        <title>CSS and JAVASCRIPT</title>
        
         <link rel="stylesheet" type="text/css" href="cssjs.css">
-        <script type="text/javascript" src="jscss.js"></script>
+        <script src="jscss.js"></script>
       
     </head>
   <body style="padding: 20px">
