--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1>JSON Parse, Stringify</h1>
-        <p><button type="button" onclick="testJSON()">JSON File</button>&nbsp;<button type="button" onclick="window.location.href='topics.html'">Back Home</button></p>
+        <p><button type="button" onclick="testJSON()">JSON File</button>&nbsp;<button type="button" onclick="window.location.href='topics.html'">Back to Topics</button></p>
         <div id="jsonOutput"></div>
         <div id="jsonStringOutput"></div>
     </body>
