--- a/topics.html
+++ b/topics.html
@@ -26,12 +26,12 @@
         <tbody>
             <tr>
                 <td>01</td>
-                <td><a href="01.html">Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays</a></td>
+                <td><a href="array.html">Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays</a></td>
                 <td>Not Yet</td>
             </tr>
             <tr>
                 <td>02</td>
-                <td><a href="02.html">Object Creation Functions, Inheritance, Properties, Methods, Instantiation</a></td>
+                <td><a href="object.html">Object Creation Functions, Inheritance, Properties, Methods, Instantiation</a></td>
                 <td>Not Yet</td>
             </tr>
             <tr>
@@ -46,7 +46,7 @@
             </tr>
             <tr>
                 <td>05</td>
-                <td><a href="05.html">Local Storage API, Storing and Retrieving Simple Data, Arrays, Associative Arrays, and Objects</a></td>
+                <td><a href="localstorage.html">Local Storage API, Storing and Retrieving Simple Data, Arrays, Associative Arrays, and Objects</a></td>
                 <td>Not Yet</td>
             </tr>
             <tr>
